k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    livestock: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      livestock: backend
  template:
    metadata:
      labels:
        livestock: backend
    spec:
      serviceAccountName: eks-sa
      containers:
      - image: kyungpyoryu/live-stock:a9cab8ac8268615ceefb2fd89b50e444737d276f
        name: live-stock
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "rds-secret-provider"
