k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    livestock: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      livestock: frontend
  template:
    metadata:
      labels:
        livestock: backend
    spec:
      serviceAccountName: eks-sa
      containers:
      - image: kyungpyoryu/live-stock:6d975c0eb1d0369f26024e713b0f0e13a1e1c1f0
        name: live-stock
