k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    livestock: frontend
  name: frontend-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    livestock: frontend
