k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livestock-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"           
    alb.ingress.kubernetes.io/target-type: "ip"                
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-1:396913715402:certificate/576da209-49e0-4bbf-a13d-d06cb6e9ff07"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
spec:
  ingressClassName: "alb"
  rules:
    - host: kpryu.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
          - path: /subscriptions/update
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
          - path: /ws/stock
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
