k8s/redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    # "redirect-to-https" 액션 정의: HTTP 요청을 HTTPS(443)로 리다이렉트, 상태코드는 301 (영구 이동) 또는 302(임시 이동)
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
spec:
  ingressClassName: "alb"
  rules:
    - host: kpryu.xyz 
      http:
        paths:
          # 모든 요청을 캡쳐하여 redirect 액션으로 전달
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: redirect-to-https
                port:
                  name: use-annotation
